# IniParser

./: CMakeLists.txt  LICENSE  README.md
include/iniparser/: iniparser.h
src/: iniparser.c
test/: CMakeLists.txt  simple.ini  test_iniparser.c
